# wrapper

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cmdline.c  cmdline.h  import.h  main.c  main.cpp  structs.h  test.c  wrapper.c  wrapper.ggo
.github/workflows/: build-for-arm64.yml  build.yml  c-cpp.yml  wrapper-qemu.yml
rootfs/data/data/com.apple.android.music/: .gitkeep
